--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-
-    <title>React App</title>
+    <title>ReFriends</title>
   </head>
   <body>
     <div id="root"></div>
